# Render

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  buildAccel_called.txt  convert_exr_to_hdr.py  imgui.ini  setScene_called.txt  test_app.ps1
docs/: ARCHITECTURE.md
models/breakfast_room/: breakfast_room.yaml
models/cornell_box/: cornell_box.yaml
models/my_box/: mybox.glb
shaders/: launch_params.h  path_tracer.cu  path_tracer_backup.cu  path_tracer_fixed.cu
shaders/device/: device_closesthit.cuh  device_curve.cuh  device_material.cuh  device_math.cuh  device_payload.cuh  device_texture.cuh
src/: Application.cpp  Application.h  Camera.cpp  Camera.h  Material.cpp  Material.h  OptixRenderer.cpp  OptixRenderer.h  PBRTLoader.cpp  PBRTLoader.h  PBRTv4Lights.cpp  PBRTv4Lights.h  PBRTv4Materials.cpp  PBRTv4Materials.h  PBRTv4Parser.cpp  PBRTv4Parser.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Spectrum.cpp  Spectrum.h  Texture.cpp  Texture.h  TextureLoader.cpp  TextureLoader.h  Window.h  main.cpp  test_pbrt_loader.cpp
src/app/: AppState.h  Application.cpp  Application.h  SceneController.cpp  SceneController.h  ViewportController.cpp  ViewportController.h
src/render/: CpuFallbackBackend.cpp  CpuFallbackBackend.h  IRenderBackend.h  RenderSettings.h  Renderer.cpp  Renderer.h
src/render/optix/: OptixBackend.cpp  OptixBackend.h
src/scene/: Scene.cpp  Scene.h  SceneImporter.cpp  SceneImporter.h  ScenePostProcessor.cpp  ScenePostProcessor.h
src/scene/importers/: AssimpSceneImporter.cpp  AssimpSceneImporter.h  MaterialLoader.cpp  MaterialLoader.h  TextureRepository.cpp  TextureRepository.h  YamlSceneImporter.cpp  YamlSceneImporter.h
